Updated Waybar  - Including CPU, Memory Usage

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -140,3 +140,19 @@
     padding: 2px 20px;
     margin: 0px 10px;   
 }
+
+#cpu {
+    background-color: @gen-background;
+    color: @gen-color;
+    border-radius: 5px;
+    padding: 2px 20px;
+    margin: 0px 10px;   
+}
+
+#memory {
+    background-color: @gen-background;
+    color: @gen-color;
+    border-radius: 5px;
+    padding: 2px 20px;
+    margin: 0px 10px;   
+}
