--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,4 +1,4 @@
-@define-color bar-color      rgba(34, 40, 49,0.4);     /* bar */
+@define-color bar-color      rgba(25,25,25,0.6);       /* bar */
 @define-color tab-background rgba(57, 62, 70,0.8);     /* button bg */
 @define-color tab-color      rgba(223, 208, 184,1);    /* button */
 @define-color hov-background rgba(223, 208, 184,1);    /* hover bg */
@@ -11,7 +11,7 @@
 * {
     font-family: 'NerdFontSymbols', monospace;
     font-size: 12px;
-    min-height: 0;
+    min-height: 0px;
     border: none;
 }
 
@@ -40,7 +40,7 @@
     font-family:  "Noto JP";
     border: none;
     box-shadow: none;
-    border-radius: 15;
+    border-radius: 15px;
     padding: 2px 1px;
     background-color: @gen-background;
 }
@@ -51,7 +51,7 @@
     transition-property: background-color;
     transition-duration: 1.0s;
     
-    min-width: 0;
+    min-width: 0px;
     box-shadow: inset 0 -3px transparent;
 
     padding: 6px 15px;
