--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,104 +1,89 @@
-@define-color bar-color      rgba(25,25,25,0.6);       /* bar */
-@define-color tab-background rgba(57, 62, 70,0.8);     /* button bg */
-@define-color tab-color      rgba(223, 208, 184,1);    /* button */
-@define-color hov-background rgba(223, 208, 184,1);    /* hover bg */
-@define-color sel-background rgba(223, 208, 184,0.6);  /* active bg */
-@define-color sel-color      rgba(34, 40, 49,1);       /* active */
-@define-color gen-color      rgba(148, 137, 121,1);    /* general */
-@define-color gen-background rgba(34, 40, 49,0.6);     /* general bg */
-
-
+@define-color color-bar          rgba(155,155,155,0.0);
+@define-color color-background-0 rgba( 20, 20, 20,0.8);
+@define-color color-background-1 rgba( 20, 33, 61,0.8);
+@define-color color-background-2 rgba(252,163, 17,0.8);
+@define-color color-background-3 rgba(229,229,229,0.8);
+@define-color color-text-0       rgba(252,163, 17,1.0);
+@define-color color-text-1       rgba(229,229,229,1.0);
+@define-color color-text-2       rgba(  0,  0,  0,1.0);
+@define-color color-text-3       rgba( 20, 33, 61,1.0);
 * {
     font-family: 'NerdFontSymbols', monospace;
     font-size: 12px;
-    min-height: 0px;
-    border: none;
+}
+
+#taskbar {
+    border-radius: 3px;
+    padding: 0px 6px;
+    margin: 2px 0px;
+    background-color: @color-background-0;
 }
 
 #taskbar button{
-    margin: 0px 5px;
-    border-radius: 10px;
+    margin: 2px 8px;
+    border-radius: 5px;
+    background-color: rgba(0,0,0,0);
 }
 
 #taskbar button.active {
-    background-color: @sel-background;
+    background-color: @color-background-2;
 }
 
 #taskbar button:hover {
-    box-shadow: inherit;
-    text-shadow: inherit;
-    background-color: @hov-background;
+    background-color: @color-background-3;
 }
 
 #waybar {
-    background-color: @bar-color;
+    background-color: @color-bar;
     transition-property: background-color;
     transition-duration: 0.5s;
 }
 
 #workspaces {
     font-family:  "Noto JP";
-    border: none;
-    box-shadow: none;
-    border-radius: 15px;
-    padding: 2px 1px;
-    background-color: @gen-background;
+    border-radius: 3px;
+    padding: 6px 8px;
+    margin: 2px 0px;
+    background-color: @color-background-0;
 }
 
 #workspaces button {
     all: initial;
-
     transition-property: background-color;
     transition-duration: 1.0s;
     
-    min-width: 0px;
     box-shadow: inset 0 -3px transparent;
 
-    padding: 6px 15px;
-    margin: 0px 5px;
+    padding: 1px 5px;
+    margin: 0px 8px;
     
-    border-radius: 15px;
+    border-radius: 8px;
 
-    background-color: @tab-background;
-    color: @tab-color;
+    background-color: @color-background-1;
+    color: @color-text-1;
 }
 
 #workspaces button.active {
-    color: @sel-color;
-    background-color: @sel-background;
+    color: @color-text-2;
+    background-color: @color-background-2;
 }
 
 #workspaces button:hover {
     box-shadow: inherit;
     text-shadow: inherit;
-    color: @sel-color;
-    background-color: @hov-background;
+    color: @color-text-3;
+    background-color: @color-background-3;
 }
 
-#clock {
-    background-color: @gen-background;
-    color: @gen-color;
-    border-radius: 5px;
-    padding: 2px 20px;
-    margin: 0px 10px;
-}
-
-#language {
-    background-color: @gen-background;
-    color: @gen-color;
-    border-radius: 5px;
-    padding: 2px 20px;
-    margin: 0px 10px;
-}
-
-#battery {
+#clock, #language, #battery, #network, #pulseaudio, #backlight, #cpu, #memory, #window {
     transition-property: color;
-    transition-duration: 2.0s;
-    background-color: @gen-background;
-    color: @gen-color;
-    border-radius: 5px;
-    padding: 2px 20px;
-    margin: 0px 10px;
+    transition-duration: 1.0s;
+
+    background-color: @color-background-0;
+    color: @color-text-0;
+    border-radius: 4px;
+    padding: 0px 10px;
+    margin: 3px 8px;
 }
 
 #battery.critical {
@@ -117,49 +102,3 @@
     color: green;
 }
 
-#network {
-    background-color: @gen-background;
-    color: @gen-color;
-    border-radius: 5px;
-    padding: 2px 20px;
-    margin: 0px 10px;
-}
-
-#pulseaudio {
-    background-color: @gen-background;
-    color: @gen-color;
-    border-radius: 5px;
-    padding: 2px 20px;
-    margin: 0px 10px;
-}
-
-#backlight {
-    background-color: @gen-background;
-    color: @gen-color;
-    border-radius: 5px;
-    padding: 2px 20px;
-    margin: 0px 10px;   
-}
-
-#cpu {
-    background-color: @gen-background;
-    color: @gen-color;
-    border-radius: 5px;
-    padding: 2px 20px;
-    margin: 0px 10px;   
-}
-
-#memory {
-    background-color: @gen-background;
-    color: @gen-color;
-    border-radius: 5px;
-    padding: 2px 20px;
-    margin: 0px 10px;   
-}
-
-#window {
-    color: @gen-color;
-    border-radius: 5px;
-    padding: 2px 20px;
-    margin: 0px 10px;   
-}
